# blockmaxi

./: Cargo.toml  frontend-db1b4f0cfd69c23b.js  frontend-db1b4f0cfd69c23b_bg.wasm  index.html
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  Trunk.toml  deploy.sh  index.html  styles.css
frontend/src/: lib.rs
frontend/src/components/: contact.rs  experience.rs  hero.rs  mod.rs  navbar.rs  projects.rs  skills.rs
shared/src/: lib.rs
