[package]
name = "web3-portfolio"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["frontend", "backend", "shared"]
resolver = "2"

[workspace.dependencies]
leptos = { version = "0.6", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
